[gd_scene load_steps=3 format=3 uid="uid://cl7lscxvibhf1"]

[ext_resource type="Script" path="res://scripts/shape.gd" id="1_kjnjp"]
[ext_resource type="Texture2D" uid="uid://bw8p3yjcekupu" path="res://assets/icon.svg" id="2_ghxu5"]

[node name="Shape" type="RigidBody2D"]
z_index = 2
collision_mask = 7
mass = 0.59
script = ExtResource("1_kjnjp")

[node name="ClickBox" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ClickBox"]
polygon = PackedVector2Array(21, 64, 64, 0, 21, -64, -21, -64, -64, 0, -21, 64)

[node name="Polygon2D" type="Polygon2D" parent="."]
clip_children = 1
polygon = PackedVector2Array(21, 64, 64, 0, 21, -64, -21, -64, -64, 0, -21, 64)

[node name="Sprite2D" type="Sprite2D" parent="Polygon2D"]
texture = ExtResource("2_ghxu5")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(21, 64, 64, 0, 21, -64, -21, -64, -64, 0, -21, 64)

[connection signal="area_entered" from="ClickBox" to="." method="_on_click_box_area_entered"]
[connection signal="area_exited" from="ClickBox" to="." method="_on_click_box_area_exited"]
[connection signal="input_event" from="ClickBox" to="." method="_on_click_box_input_event"]
